--- a/main.html
+++ b/main.html
@@ -3,12 +3,27 @@
 <html>
 
 <head>
+	<style>
+		.questions{
+			background-color=:#f8fffe;
+			height:50px;
+			margin-top:20px;
+			padding:15px;
+			max-width:600px;
+		border-left:8px solid green;
+		}
+	</style>
 	<link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
+	<div class="questions">
+		
+<p>Who was the first female to become the governor of an Indian state?</p>
+<p>Who among first Woman to climb Mount Everest twice?</p>
+<p>Who is President of India?</p>	
+		</div>
+	<script type="text/javascript" src="./script.js">
 </script>
 
 </body>
