--- a/main.html
+++ b/main.html
@@ -17,12 +17,11 @@
 </head>
 
 <body>
-	<div class="questions">
+<div class ="questions">		
+<p>Who was the first female to become the governor of an Indian state?</p></div>
+<div class ="questions"><p>Who among first Woman to climb Mount Everest twice?</p></div>
+<div  class ="questions"><p>Who is President of India?</p></div>
 		
-<p>Who was the first female to become the governor of an Indian state?</p>
-<p>Who among first Woman to climb Mount Everest twice?</p>
-<p>Who is President of India?</p>	
-		</div>
 	<script type="text/javascript" src="./script.js">
 </script>
 
