--- a/main.html
+++ b/main.html
@@ -5,7 +5,7 @@
 <head>
 	<style>
 		.questions{
-			background-color=:#f8fffe;
+			background-color:#f8fffe;
 			height:50px;
 			margin-top:20px;
 			padding:15px;
@@ -17,11 +17,18 @@
 </head>
 
 <body>
-<div class ="questions">		
-<p>Who was the first female to become the governor of an Indian state?</p></div>
-<div class ="questions"><p>Who among first Woman to climb Mount Everest twice?</p></div>
-<div  class ="questions"><p>Who is President of India?</p></div>
-		
+<blockquote class="questions">
+        <p>Who was the first female to become the governor of an Indian state?</p>
+    </blockquote>
+
+    <blockquote class="questions">
+        <p>Who among first Woman to climb Mount Everest twice?</p>
+    </blockquote>
+
+    <blockquote class="questions">
+        <p>Who is President of India?</p>
+    </blockquote>
+
 	<script type="text/javascript" src="./script.js">
 </script>
 
